@@ -7,6 +7,7 @@
 - 2020-10-25                                -
 ---------------------------------------------
 .: WSM: BugFix: Profile Image with qrcode updated (WSM-209)
+.: WSM: Task: Update Tracking URL (WSM-211)
 
 ---------------------------------------------
 - 2020-10-24                                -
